# Konikotaka

./: .dockerignore  .flake8  Dockerfile  README.md  bot.py  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run.sh
.github/workflows/: deploy-to-vps-via-tailscale.yml  lint.yaml
bot/: bot.py
bot/cogs/: admin.py  ai.py  black_jack.py  custom_tags.py  fight.py  fun.py  general.py  help.py  info.py  infom.py  levels.py  meta.py  mod.py  music.py  open_ai.py  palworld.py  pets.py  picker.py  poll.py  rcon.py  snadfun.py  snail_race.py  weather.py  webserver.py  wordcount.py
bot/cogs/utils/: default.py  gpt.py  lists.py  map_cords.py  rcon_client.py  utils.py
bot/models/: db.py  db_helper.py  pet.py  ping.py  race.py  races.py  snad.py  tags.py  users.py  word_count.py
bot/utils/: context.py  rcon_client.py  utils.py
