[tool.poetry]
name = "konikotaka"
version = "0.1.0"
description = "Personal Discord Bot"
authors = ["alexraskin <alexraskin@fastmail.fm>"]
license = "MLP 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiodns = "3.1.1"
aiofiles = "23.2.1"
aiohttp = "3.9.2"
aiohttp-cors = "0.7.0"
aiomysql = "0.2.0"
aiosignal = "1.3.1"
annotated-types = "0.6.0"
anyio = "3.7.1"
async-property = "0.2.2"
async-timeout = "4.0.3"
async-foaas = "0.4.0"
asyncmy = "0.2.8"
asyncpg = "0.28.0"
attrs = "23.1.0"
certifi = "2023.7.22"
cffi = "1.15.1"
charset-normalizer = "3.2.0"
discord-py = "2.3.2"
distro = "1.8.0"
frozenlist = "1.4.0"
greenlet = "2.0.2"
h11 = "0.14.0"
httpcore = "1.0.1"
httpx = "0.25.1"
humanize = "4.8.0"
idna = "3.4"
markupsafe = "2.1.3"
multidict = "6.0.4"
openai = "1.1.2"
pillow = "10.2.0"
psutil = "5.9.5"
pycares = "4.4.0"
pycparser = "2.21"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
pymysql = "1.1.0"
pynacl = "1.5.0"
python-dotenv = "1.0.0"
python-osrsapi = "0.0.5"
pytz = "2023.3.post1"
pyyaml = "6.0.1"
requests = "2.31.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.20"
starlette = "0.36.2"
tqdm = "4.66.1"
typing-extensions = "4.7.1"
upsidedown = "0.4"
urllib3 = "2.0.7"
validators = "0.22.0"
wavelink = "2.6.4"
yarl = "1.8.2"
rcon = { git = "https://github.com/ttk1/py-rcon.git", rev = "034dcae666c864a666e9e1d62e4f22c585970904" }
discord-ext-menus = { git = "https://github.com/Rapptz/discord-ext-menus", rev = "8686b5d1bbc1d3c862292eb436ab630d6e9c9b53" }

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
